# ePIC_taug2_simulation_package

./: .gitignore  Readme  Readme.md  build.sh  build_hep.sh  run_grape.sh  run_tauola.sh
GRAPE/: run_tauola.sh
GRAPE/TAUOLA.1.1.8-LHC/TAUOLA/: config.status  libtool
GRAPE/grape-dilepton_adapted.1k/basesv5.1/: Makefile
GRAPE/grape-dilepton_adapted.1k/chanel/: ffvmm2.f  ffvmm3.f  ffvmm5.f  ffvmm8.f  smffv_new2.f
GRAPE/grape-dilepton_adapted.1k/kinemlib/: Makefile
GRAPE/grape-dilepton_adapted.1k/src/: Makefile.spring  nt_make_new.f  read_cards.f  set_grape  set_new_grape.ksh  spring.result
GRAPE/grape-dilepton_adapted.1k/tauola_interface/: clean.py  fixmk5.py  tauola_decay.cpp  tidy.py  tidymk2.py
GRAPE/p6152/: comqr2.f  csroot.f  py2frm.f  py4jts.f  pyapps.f  pybesq.f  pyboei.f  pyct5m.f  pydata.f  pydcyk.f  pydecy.f  pydocu.f  pyedit.f  pyeig4.f  pyerrm.f  pyevnt.f  pyexec.f  pygaga.f  pyglui.f  pyh2xx.f  pyhggm.f  pyinit.f  pyinki.f  pyinom.f  pyinre.f  pyjoin.f  pykfdi.f  pykfin.f  pykmap.f  pylist.f  pylogo.f  pymass.f  pymaxi.f  pynjdc.f  pynmes.f  pypdfu.f  pypdpr.f  pypole.f  pyptdi.f  pyqqbh.f  (+21 more)
HepMC3-3.2.6/include/HepMC3/: Attribute.h  GenEvent.h  GenParticle.h  GenRunInfo.h  HepMC3
TAUOLA.1.1.8-LHC/TAUOLA/: Makefile  Makefile.in  config.status  configure  configure.ac
TAUOLA.1.1.8-LHC/TAUOLA/TauSpinner/: Makefile  README  changelog.txt
TAUOLA.1.1.8-LHC/TAUOLA/TauSpinner/examples/CP-tests/: Makefile  Makefile.am  Makefile.in
TAUOLA.1.1.8-LHC/TAUOLA/autom4te.cache/: output.1  requests  traces.0
TAUOLA.1.1.8-LHC/TAUOLA/config/: config.h
TAUOLA.1.1.8-LHC/TAUOLA/examples/: Makefile  Makefile.in
TAUOLA.1.1.8-LHC/TAUOLA/lib/: libTauolaHepMC3.la  libTauolaHepMC3.so.0  libTauolaHepMC3.so.0.0.0
TAUOLA.1.1.8-LHC/TAUOLA/platform/LCGCONFIG/src/: Makefile.am
TAUOLA.1.1.8-LHC/TAUOLA/src/: Makefile  libTauolaCxxInterface.la  libTauolaHepMC3.la
TAUOLA.1.1.8-LHC/TAUOLA/tauola-fortran/: Makefile  Makefile.in  libTauolaFortran.la
UPCGEN/: Readme.md  install.sh
UPCGEN/pythia8315/: Makefile.inc
UPCGEN/pythia8315/tmp/: Analysis.d  Basics.d  BeamParticle.d  BeamRemnants.d  BeamSetup.d  BeamShape.d  BoseEinstein.d  ColourReconnection.d  ColourTracing.d  DeuteronProduction.d  Dire.d  DireBasics.d  DireHistory.d  DireMerging.d  DireMergingHooks.d  DireSpace.d  DireSplitInfo.d  DireSplittingLibrary.d  DireSplittings.d  DireSplittingsEW.d  DireSplittingsQCD.d  DireSplittingsQED.d  DireSplittingsU1new.d  DireTimes.d  DireWeightContainer.d  Event.d  ExternalMEs.d  FJcore.d  FragmentationFlavZpT.d  FragmentationModel.d  FragmentationSystems.d  GammaKinematics.d  HIInfo.d  HINucleusModel.d  HISubCollisionModel.d  HadronLevel.d  HadronWidths.d  HardDiffraction.d  HeavyIons.d  HelicityBasics.d  (+80 more)
UPCGEN/upcgen-master/: events.root  parameters.in  run_analysis.py
grape-dilepton_adapted.1k/RUN_02/: Grape_done.hepmc  Grape_dup.hepmc  Grape_temp.hepmc  bases.result  fix_count.py  fix_hepmc_file.py  fixmk2.py  fixmk3.py  fixmk4.py  fixmk5.py  grp.rz  iter_fix.py  spring.result  tauola_decay
grape-dilepton_adapted.1k/cards/: grape.cards
grape-dilepton_adapted.1k/chanel/: Makefile  ffv.f  ffv0_am.f  ffvmm1.f  ffvmm4.f  ffvmm6.f  ffvmm7.f  ffvmm9.f
grape-dilepton_adapted.1k/src/: Makefile  bases.result  config_reader.f  grape.cards  grp.rz  mainbs.f  mainsp.f  makefile_old  nt_inc.h  pytaud.f  set_grape.ksh  set_grape.usrobj.ksh  set_grape_new  set_grape_old  set_grape_spring
grape-dilepton_adapted.1k/tauola_interface/: Grape.hepmc  reader_tester.py  tauola_decay.cpp  tidy.py
p6152/: py4frm.f  py4jet.f  py4jtw.f  py6frm.f  pycjdc.f  pyct5l.f  pydiff.f  pydisg.f  pyeevt.f  pyeicg.f  pyfint.f  pygamm.f  pygaus.f  pygbeh.f  pygfxx.f  pygive.f  pyhext.f  pyinbm.f  pyinpr.f  pyklim.f  pymrun.f  pymsin.f  pymult.f  pyofsh.f  pypdpi.f  pypdpo.f  pyprep.f  pyrand.f  pyreco.f  pyremn.f  pyresd.f  pyrnmt.f  pysave.f  pyshow.f  pysigh.f  pystat.f  pystrf.f  pysubh.f  pytabu.f  pytbbc.f  (+7 more)
(+222 files in other folders)
